--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   easy_localization: ^3.0.0
   edge_alerts: ^0.0.1
   equatable: ^2.0.3
-  fcm_config: ^3.0.7
+#  fcm_config: ^3.0.7
   firebase_auth: ^2.0.0
   firebase_core: ^1.3.0
   firebase_database: ^7.1.1
